--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea
 log
 target
+project/project
+project/target
 src/main/scala/HelperFunctions.scala
 src/main/scala/Tarry.scala
 src/main/scala/trial.scala
